<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">
                <!--Circular Image view layout-->
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profileImageViewId"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/profile"
                    app:civ_border_color="@color/endcolorgradient"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/uploadImageTextViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/uploadImageTextView"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/lineViewId"
                    android:layout_width="95dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="@color/black" />

                <EditText
                    android:id="@+id/nameEditTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/background_editview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/userNameEditText"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/phoneEditTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/background_editview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/phoneEditText"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/emailAddressEditTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/background_editview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/emailEditText"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/passwordEditTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/background_editview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/passwordEditText"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/signUpRegisterBtnId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn_gradient"
                    android:padding="8dp"
                    android:text="@string/registerBtn"
                    android:textColor="@color/tintColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <!--Or with Layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:background="@color/startcolorgradient" />

                    <TextView
                        android:id="@+id/orWithTextViewId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Or With" />

                    <View
                        android:id="@+id/orWithViewId"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:background="@color/startcolorgradient" />

                </LinearLayout>

                <!--Facebook and google plus icon layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/facebookTextViewId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/facebook_btn_gradient"
                        android:drawableLeft="@drawable/facebook"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/facebookTextView"
                        android:textColor="@color/tintColor" />

                    <TextView
                        android:id="@+id/googlePlusTextViewId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/googleplus_btn_gradient"
                        android:drawableLeft="@drawable/google_plus"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/googlePlusTextView"
                        android:textColor="@color/tintColor" />

                </LinearLayout>

                <TextView
                    android:id="@+id/alreadyHaveAccountTextViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/alreadyhaveAccountTextView"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>