<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/knifeForkImageViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spoon2"
                    android:layout_marginRight="80dp"
                    android:layout_marginLeft="80dp"

                    android:backgroundTint="@color/tintlogocolor"
                    android:padding="8dp"
                    />
                <TextView
                    android:id="@+id/foodHouseTextViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cafeHouseTextView"
                    android:textSize="60sp"
                    android:textColor="@color/startcolorgradient"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:layout_marginBottom="25dp"
                    android:padding="8dp"/>

                <EditText
                    android:id="@+id/emailAddressEditTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/background_editview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/emailEditText"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/passwordEditTextId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/background_editview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/passwordEditText"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/signUpRegisterBtnId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn_gradient"
                    android:padding="8dp"
                    android:text="Sign in"
                    android:textColor="@color/tintColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <!--Or with Layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:background="@color/startcolorgradient" />

                    <TextView
                        android:id="@+id/orWithTextViewId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Or With" />

                    <View
                        android:id="@+id/orWithViewId"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:background="@color/startcolorgradient" />

                </LinearLayout>

                <!--Facebook and google plus icon layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/facebookTextViewId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/facebook_btn_gradient"
                        android:drawableLeft="@drawable/facebook"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/facebookTextView"
                        android:textColor="@color/tintColor" />

                    <TextView
                        android:id="@+id/googlePlusTextViewId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/googleplus_btn_gradient"
                        android:drawableLeft="@drawable/google_plus"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/googlePlusTextView"
                        android:textColor="@color/tintColor" />

                </LinearLayout>

                <TextView
                    android:id="@+id/createAccountTextViewId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="Want to create account?"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>